test_suite/tests/ui/with-variant/skip_ser_tuple_field_if.stderr
error: variant `Tuple` cannot have both #[serde(serialize_with)] and a field #0 marked with #[serde(skip_serializing_if)]
 --> $DIR/skip_ser_tuple_field_if.rs:6:5
  |
6 | /     #[serde(serialize_with = "serialize_some_other_variant")]
7 | |     Tuple(#[serde(skip_serializing_if = "always")] String, u8),
  | |______________________________________________________________^

error: aborting due to previous error

